--- a/pybo/templates/base.html
+++ b/pybo/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename = 'bootstrap.min.css') }}" />
     <!-- pybo CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename = 'style.css') }}" />
-    <title>Automation 커뮤니티</title>
+    <title>Automation community</title>
   </head>
 
   <body>
